--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,11 @@ import:
   version: 8327d12beb75e6471b7f045588acc318d1147146
 - package: github.com/stretchr/testify
   version: v1.1.4
+- package: google.golang.org/grpc
+  version: v1.4.1
+- package: github.com/go-kit/kit
+  version: v0.5.0
+  subpackages:
+  - log
+- package: github.com/go-logfmt/logfmt
+  version: v0.3.0
