--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - checkout
       - run: make build_ci
-      - run: "[[ ${CIRCLE_BRANCH} = 'master' ]] && make release"
+      - run: make release
