swap integration name
Signed-off-by: greg <greg.hill@monax.io>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ workflows:
           filters:
             <<: *tags_filters
 
-      - test_integration:
+      - test_gcp_integration:
           filters:
             <<: *tags_filters
 
