--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - run:
           name: Store Service Account
-          command: echo $GCLOUD_SERVICE_KEY > /gcloud-service-key.json
+          command: printf "%s" $GCLOUD_SERVICE_KEY > /gcloud-service-key.json
       - run: |
           gcloud auth activate-service-account --key-file=/gcloud-service-key.json
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
