--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,8 @@ jobs:
     steps:
       - run:
           name: Store Service Account
-          command: printf "%s" $GCLOUD_SERVICE_KEY > /gcloud-service-key.json
-      - run: |
-          gcloud auth activate-service-account --key-file=/gcloud-service-key.json
-          gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+          command: printf "%s" $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+      - run: gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
       - checkout
       - run: make test_integration
 
