new hoard builder & restrict workflow
Signed-off-by: greg <greg.hill@monax.io>

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,8 +1,5 @@
 FROM circleci/golang:1.11
 
-# This Dockerfile is to generate the docker build image for CI services
-# See the update_docker_image Make target
-
 RUN curl -OL https://github.com/google/protobuf/releases/download/v3.3.0/protoc-3.3.0-linux-x86_64.zip
 RUN unzip protoc-3.3.0-linux-x86_64.zip -d protobuf
 RUN sudo cp protobuf/bin/protoc /usr/bin/protoc
@@ -11,3 +8,7 @@ RUN go get -u golang.org/x/tools/cmd/goimports
 RUN go get -u github.com/golang/protobuf/protoc-gen-go
 RUN go get -u github.com/golang/dep/cmd/dep
 RUN go get -u github.com/goreleaser/goreleaser
+
+RUN curl https://sdk.cloud.google.com | bash
+RUN ls /home/circleci/google-cloud-sdk/bin/
+ENV PATH /home/circleci/google-cloud-sdk/bin/:$PATH
