review changes & aws integration tests
Signed-off-by: greg <greg.hill@monax.io>

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -9,6 +9,13 @@ RUN go get -u github.com/golang/protobuf/protoc-gen-go
 RUN go get -u github.com/golang/dep/cmd/dep
 RUN go get -u github.com/goreleaser/goreleaser
 
+
+# install aws auth binaries
+RUN curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+RUN unzip awscli-bundle.zip
+RUN sudo ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+
+# install gcloud auth binaries
 RUN curl https://sdk.cloud.google.com | bash
 RUN ls /home/circleci/google-cloud-sdk/bin/
 ENV PATH /home/circleci/google-cloud-sdk/bin/:$PATH
