--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -6,12 +6,10 @@ services:
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
-      - GOOGLE_APPLICATION_CREDENTIALS
+      - GCLOUD_SERVICE_KEY
       - HOARD_JSON_CONFIG
     ports:
       - "53431:53431"
-    volumes:
-      - /tmp:/config
   hoarctl:
     build: ..
     links:
