restrict integration test to dev & master
Signed-off-by: greg <greg.hill@monax.io>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,10 @@ workflows:
           - test
           filters:
             <<: *tags_filters
+            branches:
+              only:
+              - develop
+              - master
 
       - build_docker:
           requires:
