tidy-up grants, pgp pub-key locking & js
Signed-off-by: Gregory Hill <greg.hill@monax.io>

--- a/hoard-js/package.json
+++ b/hoard-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hoard-client",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Hoard client library",
   "main": "index.js",
   "scripts": {
@@ -11,12 +11,16 @@
     "url": "https://code.monax.io/platform/hoard"
   },
   "dependencies": {
-    "grpc": "1.16.1",
-    "grpc-tools": "1.6.6",
-    "google-protobuf": "3.6.1"
+    "grpc": "1.18.0",
+    "grpc-tools": "1.7.0",
+    "google-protobuf": "3.7.0-rc.2",
+    "openpgp": "4.4.7"
   },
   "keywords": [
-    "hoard"
+    "hoard",
+    "encrypted",
+    "object",
+    "store"
   ],
   "author": "Silas Davis",
   "license": "Apache-2.0"
