--- a/hoard-js/package.json
+++ b/hoard-js/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hoard-client",
-  "version": "1.1.0",
+  "name": "@monax/hoard-client",
+  "version": "1.5.0",
   "description": "Hoard client library",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://code.monax.io/platform/hoard"
+    "url": "git+https://github.com/monax/hoard.git"
   },
   "dependencies": {
     "grpc": "1.18.0",
@@ -23,5 +23,10 @@
     "store"
   ],
   "author": "Silas Davis",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/monax/hoard/issues"
+  },
+  "homepage": "https://github.com/monax/hoard#readme",
+  "devDependencies": {}
 }
