hoard-client -> client
Signed-off-by: Gregory Hill <greg.hill@monax.io>

--- a/hoard-js/package.json
+++ b/hoard-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monax/hoard-client",
+  "name": "@monax/hoard",
   "version": "1.5.0",
   "description": "Hoard client library",
   "main": "index.js",
