--- a/scripts/integration/docker-compose.yml
+++ b/scripts/integration/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   hoard:
-    build: ..
+    build: ../..
     # These are set in the tests
     environment:
       - AWS_ACCESS_KEY_ID
@@ -12,7 +12,7 @@ services:
     ports:
       - "53431:53431"
   hoarctl:
-    build: ..
+    build: ../..
     network_mode: host
     depends_on:
       - hoard
