Remove vendor related build scripting
Signed-off-by: Silas Davis <silas@monax.io>

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,24 +1,44 @@
-FROM golang:1.11-alpine
+FROM golang:1.12.1-alpine3.9
+MAINTAINER Monax <support@monax.io>
 
 ENV PROTO_VERSION 3.3.0
 
-RUN apk add --update --no-cache nodejs npm make curl unzip git python3 bash gcc docker build-base jq
+RUN apk add --update --no-cache \
+ nodejs \
+ npm \
+ netcat-openbsd \
+ git \
+ openssh-client \
+ openssl \
+ make \
+ bash \
+ gcc \
+ g++ \
+ jq \
+ curl \
+ docker \
+ libffi-dev \
+ openssl-dev \
+ python-dev \
+ py-pip
 
-RUN pip3 install docker-compose
+RUN pip install docker-compose
+
 RUN curl -OL https://github.com/google/protobuf/releases/download/v${PROTO_VERSION}/protoc-${PROTO_VERSION}-linux-x86_64.zip
+RUN mkdir -p protobuf
 RUN unzip protoc-${PROTO_VERSION}-linux-x86_64.zip -d protobuf
 RUN cp protobuf/bin/protoc /usr/bin/protoc
 RUN rm -rf protobuf protoc-*
 
 RUN go get -u golang.org/x/tools/cmd/goimports
 RUN go get -u github.com/golang/protobuf/protoc-gen-go
-RUN go get -u github.com/golang/dep/cmd/dep
-RUN go get -u github.com/golang/lint/golint
+RUN go get -u golang.org/x/lint/golint
+ENV GO111MODULE=on
 
 # install aws auth binaries
 RUN curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
 RUN unzip awscli-bundle.zip
-RUN python3 ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+RUN python ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
 
 # install gcloud auth binaries
 RUN curl https://sdk.cloud.google.com | bash
