--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -33,6 +33,7 @@ RUN rm -rf protobuf protoc-*
 RUN go get -u golang.org/x/tools/cmd/goimports
 RUN go get -u github.com/golang/protobuf/protoc-gen-go
 RUN go get -u golang.org/x/lint/golint
+RUN go get -u github.com/goreleaser/goreleaser
 ENV GO111MODULE=on
 
 # install aws auth binaries
