--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monax/hoard",
-  "version": "1.5.5",
+  "version": "1.6.0",
   "description": "Hoard client library",
   "main": "hoard-js/index.js",
   "scripts": {
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/monax/hoard.git"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.4.0",
-    "grpc": "1.18.0"
+    "@grpc/proto-loader": "^0.5.1",
+    "grpc": "^1.21.1"
   },
   "files": [
     "hoard-js/",
@@ -34,6 +34,6 @@
   },
   "homepage": "https://github.com/monax/hoard#readme",
   "devDependencies": {
-    "mocha": "^6.0.2"
+    "mocha": "^6.1.4"
   }
 }
