--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,8 @@ release:
     owner: monax
     name: hoard
 builds:
-- main: ./cmd/hoard
+- id: hoard
+  main: ./cmd/hoard
   binary: hoard
   env:
     - CGO_ENABLED=0
@@ -13,7 +14,8 @@ builds:
     - -s -w
     - -X github.com/monax/hoard/project.commit={{.Commit}}
     - -X github.com/monax/hoard/project.date={{.Date}}
-- main: ./cmd/hoarctl
+- id: hoarctl
+  main: ./cmd/hoarctl
   binary: hoarctl
   env:
     - CGO_ENABLED=0
@@ -22,13 +24,13 @@ builds:
     - -s -w
     - -X github.com/monax/hoard/project.commit={{.Commit}}
     - -X github.com/monax/hoard/project.date={{.Date}}
-archive:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+archives:
+  - replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 snapshot:
   name_template: "{{ .Tag }}-next"
 changelog:
