--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@grpc/proto-loader": "^0.5.3",
     "grpc": "^1.24.2"
   },
+  "mocha": {
+    "bail": true
+  },
   "files": [
     "hoard-js/",
     "protobuf/"
@@ -33,6 +36,12 @@
   },
   "homepage": "https://github.com/monax/hoard#readme",
   "devDependencies": {
+    "eslint": "^6.7.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "mocha": "^6.2.2"
   }
 }
