--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v1
     - run: make build
     - run: make test
+    - run: make test_js 
 
   docker:
     runs-on: ubuntu-latest
