--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,9 @@
-name: unit
+name: test
 on:
   pull_request:
-  push:
-    branches:
-    - master
 
 jobs:
-  test:
+  unit:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-go@v1
