--- a/hoard-js/package.json
+++ b/hoard-js/package.json
@@ -23,7 +23,9 @@
     "bail": true
   },
   "files": [
-    "dist/"
+    "README.md",
+    "dist/",
+    "proto/"
   ],
   "keywords": [
     "hoard",
