--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,7 +38,7 @@ jobs:
         npm version $RELEASE_VERSION
         npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
         npm publish --access public .
-      
+
   docker:
     runs-on: ubuntu-latest
     steps:
@@ -54,3 +54,15 @@ jobs:
         echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} quay.io --password-stdin
         docker tag ${DOCKER_REPO}:${tag#v} ${DOCKER_REPO}:latest
         docker push ${DOCKER_REPO}
+
+  charts:
+    runs-on: ubuntu-latest
+    env:
+      CM_USERNAME: ${{ secrets.CM_USERNAME }}
+      CM_PASSWORD: ${{ secrets.CM_PASSWORD }}
+      CM_URL:  ${{ secrets.CM_URL }}
+    steps:
+      - uses: actions/checkout@v2
+      - run: git fetch --unshallow --prune
+      - run: make helm_deps
+      - run: make helm_push
