--- a/js/package.json
+++ b/js/package.json
@@ -4,23 +4,25 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc --build",
-    "test": "mocha -r ts-node/register src/test/*"
+    "test": "jest src/.*\\.test.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/monax/hoard.git"
   },
   "dependencies": {
-    "@types/google-protobuf": "^3.7.2",
-    "@types/mocha": "^5.2.7",
-    "grpc": "^1.24.2",
-    "grpc-tools": "^1.8.1",
-    "ts-node": "^8.5.4",
-    "ts-protoc-gen": "^0.12.0",
-    "typescript": "^3.7.4"
+    "@grpc/grpc-js": "^1.2.1",
+    "@types/google-protobuf": "^3.7.4",
+    "google-protobuf": "^3.14.0",
+    "grpc-tools": "^1.10.0",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^9.0.0",
+    "ts-protoc-gen": "^0.13.0",
+    "typescript": "^4.0.5"
   },
-  "mocha": {
-    "bail": true
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   },
   "files": [
     "README.md",
@@ -43,12 +45,13 @@
   },
   "homepage": "https://github.com/monax/hoard#readme",
   "devDependencies": {
-    "eslint": "^6.7.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^6.2.2"
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4"
   }
 }
