--- a/js/package.json
+++ b/js/package.json
@@ -10,11 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/monax/hoard.git"
   },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.2.1",
-    "@types/google-protobuf": "^3.7.4",
-    "google-protobuf": "^3.14.0"
-  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
@@ -39,19 +34,28 @@
     "url": "https://github.com/monax/hoard/issues"
   },
   "homepage": "https://github.com/monax/hoard#readme",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.2.1",
+    "@types/google-protobuf": "^3.7.4",
+    "google-protobuf": "^3.14.0",
+    "openpgp": "^4.10.8"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/openpgp": "^4.4.14",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "grpc-tools": "^1.10.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "prettier-plugin-organize-imports": "^1.1.1",
+    "source-map-support": "^0.5.19",
     "ts-jest": "^26.4.4",
-    "grpc-tools": "^1.10.0",
     "ts-node": "^9.0.0",
     "ts-protoc-gen": "^0.13.0",
-    "typescript": "^4.0.5",
-    "source-map-support": "^0.5.19"
+    "typescript": "^4.1.2"
   }
 }
