--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
-    "moduleResolution": "Node",
+    "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
+    "target": "ES2020",
+    "lib": ["ES2020"],
+    "moduleResolution": "node",
+    "module": "ES2020",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "allowJs": false,
     "declaration": true,
-    "target": "ES2020",
     "preserveSymlinks": true,
     "sourceMap": true,
     "strict": true,
@@ -14,7 +19,15 @@
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "strictPropertyInitialization": true,
-    "lib": ["ES2020", "DOM"]
+    "paths": {
+      "*": [
+        "./types/*"
+      ]
+    },
+    "typeRoots": [
+      "./types",
+      "node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
